Sidebar with routes as param.

--- a/projects/shared-library/src/lib/sidebar/sidebar.component.scss
+++ b/projects/shared-library/src/lib/sidebar/sidebar.component.scss
@@ -10,7 +10,7 @@
     padding-top: 20px;
     }
     
-    .sidenav a {
+    .sidenav div {
       padding: 6px 8px 6px 16px;
       text-decoration: none;
       font-size: 25px;
@@ -18,7 +18,7 @@
       display: block;
     }
     
-    .sidenav a:hover {
+    .sidenav div:hover {
       color: #f1f1f1;
     }
     
