--- a/projects/shared-library/src/lib/sidebar/sidebar.component.html
+++ b/projects/shared-library/src/lib/sidebar/sidebar.component.html
@@ -1,6 +1,5 @@
 <div class="sidenav">
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#clients">Clients</a>
-    <a href="#contact">Contact</a>
+    <div *ngFor="let route of routes">
+        <a [routerLink]='route.link'>{{route.title}}</a>
+    </div>
 </div>
