--- a/projects/shared-library/src/lib/header/header.component.scss
+++ b/projects/shared-library/src/lib/header/header.component.scss
@@ -1,13 +1,32 @@
 .header {
     width: 100%;
     box-sizing: border-box;
-    background-color: green;
-    padding-top:15px;
-    padding-bottom:15px;
+    background-color: #fff;
+    padding: 25px 0px 25px 0px;
+    border-bottom: 1px solid #e3e3e3;
+
+    .div-logo {
+        background: url("../../assets/logo.png") no-repeat;
+        background-repeat: no-repeat;
+        background-size: contain;
+        background-position: left;
+        height: 80px;
+        width: 15%;
+        float: left;
+        margin-top: -25px;
+        margin-left: 25px;
+    }
+    .div-sides {
+        display: inline-grid;
+        width: 5%;
+    }
+    .div-menu {
+        display: inline-grid;
+        width: 75%;
+    }
 
     h1 {
-        margin:0;
+        margin: 0;
         text-align: center;
-        color:white;
     }
 }
