--- a/projects/shared-library/src/lib/sidebar/sidebar.component.scss
+++ b/projects/shared-library/src/lib/sidebar/sidebar.component.scss
@@ -1,24 +1,26 @@
 .sidenav {
-    height: 74.5%;
-    width: 160px;
+    height: 100%;
+    width: 150px;
     position: fixed;
     z-index: 1;
     top: 50;
     left: 0;
-    background-color: #6d9168;
+    background-color: #FFF;
     overflow-x: hidden;
-    padding-top: 20px;
-    }
+    padding-top: 40px;
+    border-right:1px solid #e3e3e3;
+    font-size: 20px;
+    padding-left: 10px;
     
     .sidenav div {
       padding: 6px 8px 6px 16px;
       text-decoration: none;
       font-size: 25px;
-      color:white;
+      color: #818181;
       display: block;
     }
     
     .sidenav div:hover {
       color: #f1f1f1;
     }
-    
+  }
